Feat: feito linhas apenas para testes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=springboot
-spring.datasource.url=jdbc:h2:file:C:/;IFEXISTS=FALSE
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=123
 spring.datasource.password=123
