--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=springboot
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:./testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=123
 spring.datasource.password=123
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+logging.level.org.springframework.security=DEBUG
